--- a/main.html
+++ b/main.html
@@ -55,7 +55,7 @@
     .bottom{
     width:100%;
     height:20px;
-    background:#dcdcdc;
+    background:gold;
     bottom:20px;
     position:absolute;
     }
@@ -95,7 +95,7 @@
     </div>
     </div>
     <div class=bottom> 
-    <p><em>www.dawendiguo.com suproted</em></p>
+    <p><em>www.dawendiguo.com</em></p>
     </div>
     </div>
 </body>
