--- a/myMusicplayer/mp3/player.html
+++ b/myMusicplayer/mp3/player.html
@@ -5,6 +5,7 @@
     <title>我的音乐</title>
     <style type=text/css>
     .test{
+    margin:0 auto;
     width:500px;
     background-color:#6c6c6c;
     border-radius:20px;
@@ -13,10 +14,10 @@
     height:40px;
     text-align:center;
     color:#fcfcfc;
-    margin:0 auto;
+    position:relative;
     }
     .header p{
-    padding-top:10px;
+    padding-top:02px;
     font-size:32px;
     }
     .index{
@@ -24,6 +25,7 @@
     height:800px;
     float:center;
     margin:0 auto;
+    position:relative;
     background-image: url("img/music.png");
     background-size:460px 800px;
     }
@@ -31,17 +33,16 @@
     padding:20px 20px;
     width:460px;
     margin:0 auto;
-    opacity:50;
+    opacity:0.2;
     }
     .musicInfo{
+        text-align:center;
+    position:absolute
+    width:460px;
     height:20px;
-    width:460;
-    padding-right:0px;
     color:blue;   
     background:yellow;
     font-size:16px;
-    margin-top:780px;
-    position:absolute;
     }
     .control{
     height:60px;
@@ -71,8 +72,11 @@
 </head>
 <body>
    <div class=test>
-   <div class=header><p>dawen<p></div>
-   <div class=index><span class=musicInfo>just a tezt*</span></div>
+   <div class=header>
+      <p>dawen<p></div>
+   <div class=index>
+       <p class=musicInfo>just a tezt*</p>
+   </div>
    <div class=control>
    <img src="img/menu.ico" class=menu />
    <img src="img/main.ico" class=main />
