--- a/Content/Details/Books.html
+++ b/Content/Details/Books.html
@@ -27,6 +27,7 @@
     <div class="books">Book16</div>
     <div class="books">Book17</div>
     <div class=links>
+        <a href="MainTarget.html" class='links'>MainPage</a>
         <a href="Introduce.html" class='links'> Introduce</a>
         <a class="links" href="Tools.html">Tools</a>
         <a class="links" href="Games.html">Games</a>
