--- a/Content/Details/Introduce.html
+++ b/Content/Details/Introduce.html
@@ -16,6 +16,8 @@
         <li>3.提醒我限号日期。</li>
     </ul>
     <div class='links'>
+
+         <a href="MainTarget.html" class='links'>MainPage</a>
          <a href="Books.html" class='links'>My Books</a>
          <a class="links" href="Tools.html">Tools</a>
          <a class="links" href="Games.html">Games</a>
