--- a/Content/Menu/menu.html
+++ b/Content/Menu/menu.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css.css" type='text/css'/>
 </head>
 <body>
+    <p>MainTarget</p>
     <p>Introduce</p>
     <p>Books</p>
     <p>Games</p>
