--- a/Content/mid.html
+++ b/Content/mid.html
@@ -8,7 +8,7 @@
     </script>
     <frameset cols='10%,*' id=midFrameSet frameborder='no' border='0'>
     <frame name='menu' src='Menu/menu.html'/>
-    <frame name='details' src='Details/Introduce.html'/>
+    <frame name='details' src='Details/MainTarget.html'/>
     </frameset>
 </head>
 <body>
